# Vanya

vanya/: .gitignore  package-lock.json  package.json
vanya/backend/: NLP.py  app.py  forecast.py  gee_ndvi.py  gee_tiles.py  main.py  pyproject.toml  requirements.txt  viewmap.py  yolo_inference.py
vanya/frontend/: .gitignore  package-lock.json  package.json
vanya/frontend/src/: App.jsx  api.js
vanya/frontend/src/components/: Alerts.jsx  MapView.jsx
vanya/notebooks/: yolo11n_train.ipynb
vanya/src/: App.js
