[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "earthengine-api>=1.6.6",
    "ee>=0.2",
    "fastapi>=0.116.1",
    "flask>=3.1.2",
    "geemap>=0.36.2",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.2",
    "prophet>=1.1.7",
    "python-dotenv>=1.1.1",
    "ultralytics>=8.3.193",
    "uv>=0.8.15",
    "uvicorn>=0.35.0",
]
